gccida/g1/new_alias_set
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_alias_set/src/alias.c:1060:10: error: use of undeclared identifier 'last_alias_set_5'
return ++last_alias_set_5; 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_alias_set/src/obj/alias.o] Error 1
